# poetry-pybind11-template

./: .gitignore  README.md  build_ext.py  pyproject.toml
ext/src/: main.cpp
src/poetry_pybind11_template/: __init__.py  sub.py
tests/: test_ppt.py
