[tool.poetry]
name = "poetry-pybind11-template"
version = "0.1.0"
description = "Poetry/Pybind11 template"
authors = ["Louie Lu <git@louie.lu>"]
license = "BSD 3-Clause Clear License"
readme = "README.md"
packages = [{include = "poetry_pybind11_template", from = "src" }]


[tool.poetry.build]
script = "build_ext.py"
generate-setup-file = true

[tool.poetry.dependencies]
python = "^3.10"
pybind11 = "^2.10.4"
numpy = "^1.25.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pre-commit = "^3.3.3"

[build-system]
requires = ["poetry>=1.1.0", "setuptools", "wheel", "pybind11>=2.10.4"]
build-backend = "poetry.masonry.api"
